    * Serializing and parsing floats now works
    * JsonObject.add now escapes the member name