@@ -1,6 +1,7 @@
 package tests;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 import org.junit.Test;
 
@@ -26,5 +27,40 @@ public class TestAPI {
 	public void testStringValue_2() {
 		JsonNumber num = new JsonNumber("123");
 		assertEquals("tmnt", num.stringValue("tmnt"));
+	}
+
+	@Test
+	public void testAddMember_1() {
+		JsonObject obj = new JsonObject();
+		obj.add("foo", "bar");
+		assertEquals("bar", obj.get("foo").stringValue(""));
+	}
+
+	@Test
+	public void testAddMember_2() {
+		JsonObject obj = new JsonObject();
+		obj.add("foo", 1314);
+		assertEquals(1314, obj.get("foo").intValue(0));
+	}
+
+	@Test
+	public void testAddMember_3() {
+		JsonObject obj = new JsonObject();
+		obj.add("foo", 3.141592);
+		assertEquals(3.141592, obj.get("foo").doubleValue(0), 0.00001);
+	}
+
+	@Test
+	public void testAddMember_4() {
+		JsonObject obj = new JsonObject();
+		obj.add("foo", true);
+		assertEquals(true, obj.get("foo").boolValue(false));
+	}
+
+	@Test
+	public void testAddMember_5() {
+		JsonObject obj = new JsonObject();
+		obj.add("foo", false);
+		assertEquals(false, obj.get("foo").boolValue(true));
 	}
 }
