@@ -1,2 +1,3 @@
+    * Improved JsonObject API
     * Serializing and parsing floats now works
     * JsonObject.add now escapes the member name
